--- a/www/index.html
+++ b/www/index.html
@@ -20,21 +20,23 @@
 		document.addEventListener("intel.xdk.device.ready",onDeviceReady,false);
 	</script>
 
+    <script src="assets/js/jquery-1.11.1.min.js"></script>
+    <script src="assets/js/jquery.mobile-1.4.3.min.js"></script>
 
     <link rel="stylesheet" href="assets/css/gomobility.css">
     <link rel="stylesheet" href="assets/css/jquery.mobile.structure-1.4.3.min.css">
+    <link rel="stylesheet" href="assets/fonts/fonts.css">
     <link rel="stylesheet" href="assets/css/style.css">
 
-    <script src="assets/js/jquery-1.11.1.min.js"></script>
-    <script src="assets/js/jquery.mobile-1.4.3.min.js"></script>
 
 
 </head>
 <body>
 
-    <!-- **************************** HOME PAGE **************************** -->
-    <div data-role="page" data-theme="a" id="home">
+    <!-- **************************** PAGE CONNEXION **************************** -->
+    <div data-role="page" data-theme="a" id="login">
         <div data-role="header" data-position="inline">
+            
             <h1>Go Mobility</h1>
         </div>
         <div data-role="content" data-theme="a" class="content">
@@ -44,44 +46,92 @@
 
         </div>
     </div>
-    <!-- **************************** FIN HOME PAGE **************************** -->
+    <!-- **************************** FIN CONNEXION **************************** -->
 
 
     <!-- **************************** PAGE CONNEXION EMAIL **************************** -->
     <div data-role="page" data-theme="a" id="connexion">
         <div data-role="header" data-position="inline">
+            <a href="#login" data-transition="slide" data-direction="reverse" class="ui-btn ui-icon-delete ui-btn-icon-notext"></a>
             <h1>Go Mobility</h1>
         </div>
         <div data-role="content" data-theme="a" class="content">
 
             <p>Connexion</p>
 
+            <p><a href="#home"  data-transition="slide">Home</a></p>
+
         </div>
     </div>
     <!-- **************************** FIN PAGE CONNEXION EMAIL **************************** -->
 
 
-    <!-- ****************************  PAGE **************************** -->
-    <div data-role="page" data-theme="a">
+    <!-- **************************** PAGE HOME **************************** -->
+    <div data-role="page" data-theme="a" id="home">
         <div data-role="header" data-position="inline">
-            <h1>It Worked!</h1>
+            <h1><img src="assets/img/headLogo.png" alt=""/>Go Mobility</h1>
         </div>
-        <div data-role="content" data-theme="a">
+        <div data-role="content" data-theme="a" class="content">
+            <h3 class="textCenter">L'ardèche éco-responsable</h3>
 
-            <p>This is content color swatch "A" and a preview of a <a href="#" class="ui-link">link</a>.</p>
-            <label for="slider1">Input slider:</label>
-            <input type="range" name="slider1" id="slider1" value="50" min="0" max="100" data-theme="a" />
-            <fieldset data-role="controlgroup"  data-type="horizontal" data-role="fieldcontain">
-                <legend>Cache settings:</legend>
-                <input type="radio" name="radio-choice-a1" id="radio-choice-a1" value="on" checked="checked" />
-                <label for="radio-choice-a1">On</label>
-                <input type="radio" name="radio-choice-a1" id="radio-choice-b1" value="off"  />
-                <label for="radio-choice-b1">Off</label>
-                <input type="radio" name="radio-choice-a1" id="radio-choice-c1" value="off"  />
-                <label for="radio-choice-c1">Off</label>
-            </fieldset>
+            <div class="ui-grid-a btnChoix">
+
+                    <a class="ui-block-a textCenter ui-shadow ui-btn ui-corner-all btnHome" href="#submit"  data-transition="slide"  >
+                        <img src="assets/img/icon_submit.png" alt=""  />
+                        <p>JE PROPOSE<br><span>mon parcours</span></p>
+                    </a>
+
+
+                <a class="ui-block-b textCenter ui-shadow ui-btn ui-corner-all btnHome" href="#search"  data-transition="slide" >
+                    <img src="assets/img/icon_search.png" alt="" />
+                    <p>JE CHOISIS<br><span>mon parcours</span></p>
+                </a>
+            </div>
+
+            <p>Déjà</p>
+            <div class="ges">
+                <p>XXX g</p>
+            </div>
+            <p>économisé grâce à vous</p>
+
+
+        </div>
+        <div data-role="footer" data-position="fixed">
+            <h1><img src="assets/img/icon_concours.png" alt=""/>Participez à notre concours !</h1>
         </div>
     </div>
-    <!-- ****************************  PAGE **************************** -->
+    <!-- **************************** FIN HOME **************************** -->
+
+
+
+    <!-- **************************** PAGE PROPOSITION **************************** -->
+    <div data-role="page" data-theme="a" id="submit">
+        <div data-role="header" data-position="inline">
+            <a href="#home" data-transition="slide" data-direction="reverse" class="ui-btn ui-icon-delete ui-btn-icon-notext"></a>
+            <h1>Go Mobility</h1>
+        </div>
+        <div data-role="content" data-theme="a" class="content">
+
+            <p>Submit</p>
+
+        </div>
+    </div>
+    <!-- **************************** PAGE PROPOSITION **************************** -->
+
+
+    <!-- **************************** PAGE RECHERCHE PARCOURS **************************** -->
+    <div data-role="page" data-theme="a" id="search">
+        <div data-role="header" data-position="inline">
+            <a href="#home" data-transition="slide" data-direction="reverse" class="ui-btn ui-icon-delete ui-btn-icon-notext"></a>
+            <h1>Go Mobility</h1>
+        </div>
+        <div data-role="content" data-theme="a" class="content">
+
+            <p>Search</p>
+
+        </div>
+    </div>
+    <!-- **************************** FIN PAGE RECHERCHE PARCOURS **************************** -->
+
 </body>
 </html>
