--- a/www/index.html
+++ b/www/index.html
@@ -41,7 +41,7 @@
     <div data-role="page" data-theme="a" id="login">
         <div data-role="header" data-position="inline">
             
-            <h1>Go Mobility</h1>
+            <h1><img src="assets/img/headLogo.png" alt=""/>Go Mobility</h1>
         </div>
         <div data-role="content" data-theme="a" class="content">
 
@@ -57,7 +57,7 @@
     <div data-role="page" data-theme="a" id="connexion">
         <div data-role="header" data-position="inline">
             <a href="#login" data-transition="slide" data-direction="reverse" class="ui-btn ui-icon-delete ui-btn-icon-notext"></a>
-            <h1>Go Mobility</h1>
+            <h1><img src="assets/img/headLogo.png" alt=""/>Go Mobility</h1>
         </div>
         <div data-role="content" data-theme="a" class="content">
 
@@ -111,8 +111,8 @@
     <!-- **************************** PAGE PROPOSITION **************************** -->
     <div data-role="page" data-theme="a" id="submit">
         <div data-role="header" data-position="inline">
-            <a href="#home" data-transition="slide" data-direction="reverse" class="ui-btn ui-icon-delete ui-btn-icon-notext"></a>
-            <h1>Go Mobility</h1>
+            <a href="#home" data-transition="slide" data-direction="reverse" class="ui-btn ui-icon-home ui-btn-icon-notext"></a>
+            <h1><img src="assets/img/headLogo.png" alt=""/>Go Mobility</h1>
         </div>
         <div data-role="content" data-theme="a" class="content">
 
@@ -173,8 +173,8 @@
     <!-- **************************** PAGE RECHERCHE PARCOURS **************************** -->
     <div data-role="page" data-theme="a" id="search">
         <div data-role="header" data-position="inline">
-            <a href="#home" data-transition="slide" data-direction="reverse" class="ui-btn ui-icon-delete ui-btn-icon-notext"></a>
-            <h1>Go Mobility</h1>
+            <a href="#home" data-transition="slide" data-direction="reverse" class="ui-btn ui-icon-home ui-btn-icon-notext"></a>
+            <h1><img src="assets/img/headLogo.png" alt=""/>Go Mobility</h1>
         </div>
         <div data-role="content" data-theme="a" class="content">
 
@@ -189,7 +189,7 @@
     <div data-role="page" data-theme="a" id="parcours">
         <div data-role="header" data-position="inline">
             <a href="#submit" data-transition="slide" data-direction="reverse" class="ui-btn ui-icon-delete ui-btn-icon-notext"></a>
-            <h1>Go Mobility</h1>
+            <h1><img src="assets/img/headLogo.png" alt=""/>Go Mobility</h1>
         </div>
         <script type="text/javascript"
                 src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD1ruG9PaUssg06qR5pAKoKi0fk6Va6Gz0">
